# ProXPL

./: .codacyrc  .gitignore  .internal_ignore  ALL_FILES_STATUS.md  ARCHITECTURE_REVIEW.md  BASELINE_REPORT.md  BENCHMARKS.md  BUILD.md  CHANGELOG.md  CHEATSHEET.md  CMakeLists.txt  CMakeLists_IMPROVED.txt  CODE_OF_CONDUCT.md  CODING_STANDARD.md  CONTRIBUTING.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  Directory_Explaination.md  Doxyfile  ECOSYSTEM_DESIGN.md  FILE_MANIFEST.md  FINAL_DELIVERY.md  FINAL_STATUS.md  GETTING_STARTED.md  GOVERNANCE.md  INDEX.md  LANGUAGE_SPEC.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_C_TRANSLATION.md  README_IMPROVED.md  REFACTOR-REPORT.md  REFACTORING_SUMMARY.md  REFACTOR_REPORT.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  (+34 more)
.github/workflows/: benchmarks.yml  build.yml  ci.yml  codacy.yml  release.yml  snyk-security.yml
apps/: demo_app.prox  system_test.prox
benchmarks/: PLAN.md  fibonacci.prox  gc_stress.prox  loop_math.prox  run_benchmarks.py  string_concat.prox
benchmarks/macro/: binary_trees.prox  http_sim.prox  json_bench.prox  json_bench_fixed.prox  matrix_mul.prox  merge_sort.prox  nbody.prox
benchmarks/micro/: array_ops.prox  collatz.prox  dict_access.prox  fib.prox  primes.prox
benchmarks/reference/: array_ops.js  array_ops.py  collatz.js  collatz.py  dict_access.js  dict_access.py  fib.cpp  fib.go  fib.java  fib.js  fib.py  http_sim.cpp  http_sim.go  http_sim.java  http_sim.js  http_sim.py  matrix_mul.js  matrix_mul.py  nbody.js  nbody.py  primes.js  primes.py
builds/release/: README.txt
cli/: main.py  prm.py
cli/commands/: build.py  run.py
cli/scripts/: clean.py
cli/watcher/: watcher.py
configs/: compiler-config.json  sdk-config.json  vm-config.json
core/: tokens.py  types.py
core/ast/: ast_nodes.py
core/compiler/: compiler_pipeline.py
core/ir/: ir_format.py
core/lexer/: lexer.py
core/main/: main.py
core/optimizer/: optimizer.py
core/parser/: parser.py
core/runtime/: importer.py
core/semantic/: type_checker.py
core/vm/: vm.py
csrc/: Makefile  README.md  main.c
csrc/runtime/: object.c  value.c
csrc/stdlib/: convert_native.c  io_native.c  stdlib_core.c  string_native.c
deliverables/02_optimization/: OPTIMIZATION_STRATEGY.md
deliverables/03_jit/: JIT_DESIGN.md
deliverables/v0.5.0/: release_v0.5.0.md
docs/: 01_core_pillars_1_to_5.md  02_core_pillars_6_to_10.md  BUILD_GUIDE.md  BYTECODE_SPEC.md  DECODER_AND_DISPATCH_SPEC.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  ECOSYSTEM_DESIGN.md  REGISTRY.md  VERSIONING.md  VM_ARCHITECTURE.md  VM_PERFORMANCE_UPDATE_APRIL_2026.md  VSCODE.md  code-audit-22-04-26.md  compiler_backend_fixes.md  design.md  instruction_encoding_examples.md  language-spec.md  security_and_stability_fixes.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_V2.md  VM_ARCHITECTURE.md  compiler_arch.md  paradigms.md
docs/expansion_plan/: ASR_DEMO_README.md  ASR_RUNTIME.md  ASR_RUNTIME_FULL.md  LSP_TAINT.md  ProXWire.md  ProXWire_RUNTIME.md  TensorGraph.md
docs/ir/: opcodes.md
docs/ir-spec/: bytecode_format.md
docs/language-spec/: LANGUAGE_SPEC.md  grammar.md  reference_manual.md  syntax.md
docs/maintenance/: BUG_FIX_LOG_2026_04.md
docs/migration/: PYTHON_TO_C.md
docs/pillars/: 01_intent_oriented.md  02_context_aware.md  03_asr.md  04_intrinsic_security.md  (+6 more)
examples/: async_test.pxpl  calculator.prox  cli_test.prox  fib.prox  fibonacci.prox  hello.prox  hello.proxbc  hello_blob.proxbc  premium_ui.prox  prm_demo.prox  test.prox  test_pxcf.prox  ui_test.prox  use_stdlib.prox  web_app_demo.prox
extension/: LICENSE.txt  README.md  eslint.config.mjs  generate_theme.js  package-lock.json  package.json  proxpl-0.2.0.vsix  proxpl-0.3.0.vsix  proxpl-0.4.0.vsix  proxpl-0.5.0.vsix  proxpl-0.5.1.vsix  tsconfig.json  vsc-extension-quickstart.md
include/: advanced.h  ast.h  backend_llvm.h  bytecode.h  chunk.h  common.h  compiler.h  debug.h  error_report.h  ffi_bridge.h  file_utils.h  gc.h  importer.h  ir.h  ir_opt.h  md5.h  memory.h  object.h  optimizer.h  parser.h  proxpl_api.h  scanner.h  sha256.h  stdlib_native.h  table.h  transpiler_ui.h  type_checker.h  value.h  vm.h
libs/: demo_app.prox  prox.cache.chrono.prox  prox.net.shield.prox  proxwire.prox
logs/: brace_log.txt  build_output.txt  trace_log.txt
lsp/: README.md  proxpl_lsp_taint.py
runtime/: asr_lockfree_queue.cpp  asr_lockfree_queue.h  asr_runtime.cpp  asr_runtime.h  asr_runtime_full.cpp  asr_runtime_full.h  asr_supervisor.cpp
scripts/: build.sh  build_dist.py  build_unix.sh  build_windows.ps1  create_launcher.sh  release.sh  setup_llvm_windows.ps1
src/: .gitignore  Makefile  README.md  main.c  proxpl_api.c
std/: README.md
stdlib/: collections.py  convert.py  datetime.py  io.py  math.prox  math.py  runtime.py  stdlib.py  string.py  system.py
test/: debug_for.prox  debug_keywords.prox  debug_shadow.prox  test_builtins.prox  test_datatypes.prox  test_random.prox
tests/: CMakeLists.txt  ai_demo.prox  asr_queue_test.cpp  asr_runtime_test.cpp  bytecode_tests.c  cop_test.prox  debug_logical.prox  ffi_test.prox  oop_v1.0.0.prox  oop_verify.prox  repro_assign.prox  repro_assign_obj.prox  repro_random.prox  stdlib_test.prox  stdlib_v0.9.0.prox  tensor_tests.prox  test_debug.prox  test_hash.prox  test_http_sim_logic.prox  test_integration.py  test_intent.prox  test_keywords.prox  test_libraries.prox  test_new_libs.prox  test_opcode_roundtrip.c  test_opcode_values.c  test_quote.prox  test_specs.py  test_validation.prox  ui_test.prox  verify_all_features.prox  verify_modules.py  vm_stub.c
tests/repro/: repro.prox  repro_func.prox  repro_input.prox  repro_print.prox
tests/temp_src/: count_braces.c
tests/unit/: test_scanner_template.c
tickets/: TICKET-001.md  TICKET-002.md  TICKET-003.md  TICKET-004.md
tools/: build_asr_demo.ps1  build_asr_demo_vs.bat  ir_gen_test.c  llvm_gen_test.c  prm_main.c  resolve_head.py
tools/bench/: CMakeLists.txt  README.md  README_MSVS.md  bench_simple.c  build_msvc.ps1
wrappers/: proxpl_wrapper.py
(+173 files in other folders)
